fix 2 bruhs